--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <header>
     <div class="header-top">
-      <a class="logo" href="index.html" title="Обновить страницу">техномарт</a>
-      <input class="header-top-search" type="text" name="main-search" value="Поиск:">
+      <a class="header-logo" href="index.html" title="Обновить страницу">техномарт</a>
+      <input class="header-top-search" type="text" name="main-search" placeholder="Поиск:">
       <a class="header-top-btn btn-bookmarks" href="#">Закладки: 0</a>
       <a class="header-top-btn btn-cart" href="#">Корзина: 0</a>
       <a class="header-top-btn btn-order" href="#">Оформить заказ</a>
@@ -189,7 +189,7 @@
   <footer>
     <div class="footer-top">
       <div>
-        <a class="footer-logo" href="#" title="В начало страницы"></a>
+        <a class="footer-logo" href="#" title="В начало страницы">техномарт</a>
         <nav class="footer-nav">
           <ul class="footer-nav-list">
             <li class="footer-nav-item"><a href="#">Компания</a></li>
@@ -243,6 +243,7 @@
       <button class="popup-close-btn popup-close-btn-write-us"><span>закрыть</span></button>
     </form>
   </div>
+  <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 
 </html>
