--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
       <a class="header-top-btn header-btn-order" href="#">Оформить заказ</a>
     </div>
     <div class="header-mid">
-      <h1>Интернет-магазин строительных материалов и инструментов для ремонта</h1>
+      <p class="header-mid-title">Интернет-магазин строительных материалов и инструментов для ремонта</p>
       <div class="header-contacts">
         <a class="header-tel" href="tel:+78125550555" title="Позвонить нам">+7 (812) 555-05-55
                 </a>
@@ -25,9 +25,9 @@
         </p>
       </div>
       <ul class="user-menu">
-        <li><a class="user-menu-item user-menu-profile" href="#">Равшан Джамшутович</a><a class="user-logout" href="#" title="Выход"></a></li>
-        <li><a class="user-menu-item user-menu-orders" href="#">Мои заказы</a></li>
-        <li><a class="user-menu-item user-menu-control-panel" href="#">Личный кабинет</a></li>
+        <li class="user-menu-item"><a class="user-menu-btn user-menu-profile" href="#">Равшан Джамшутович</a><a class="user-logout" href="#" title="Выход"></a></li>
+        <li class="user-menu-item"><a class="user-menu-orders" href="#">Мои заказы</a></li>
+        <li class="user-menu-item"><a class="user-menu-control-panel" href="#">Личный кабинет</a></li>
       </ul>
     </div>
     <div class="header-bot">
@@ -73,96 +73,96 @@
             <input type="radio" name="radio-accumulators" id="radio-accumulators" checked><label for="radio-accumulators">аккумуляторные</label>
             <input type="radio" name="radio-wired" id="radio-wired"><label for="radio-wired">сетевые</label>
           </fieldset>
-          <input type="submit" name="submit" id="submit" value="показать">
+          <input class="catalog-filter-submit" type="submit" name="submit" id="submit" value="показать">
         </form>
       </div>
       <div class="catalog-sort"></div>
       <ul class="catalog-goods">
         <li class="catalog-item">
-          <img src="img/Perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 3000" class="catalog-item-img">
+          <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 3000" class="catalog-item-img">
           <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
           <span class="goods-old-price">22500 р.</span>
-          <a class="catalog-item-price red-btn" href="#">15500 р.</a>
+          <a class="catalog-item-price primary-btn" href="#">15500 р.</a>
           <div class="catalog-item-popup">
               <a class="catalog-item-popup-buy" href="#">купить</a>
               <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
           </div>
         </li>
         <li class="catalog-item">
-          <img src="img/Perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 6000" class="catalog-item-img">
+          <img src="img/perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 6000" class="catalog-item-img">
           <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
           <span class="goods-old-price">30500 р.</span>
-          <a class="catalog-item-price red-btn" href="#">25500 р.</a>
+          <a class="catalog-item-price primary-btn" href="#">25500 р.</a>
           <div class="catalog-item-popup">
               <a class="catalog-item-popup-buy" href="#">купить</a>
               <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
           </div>
         </li>
         <li class="catalog-item">
-          <img src="img/Perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 2000" class="catalog-item-img">
+          <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 2000" class="catalog-item-img">
           <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
           <span class="goods-old-price"></span>
-          <a class="catalog-item-price red-btn" href="#">12500 р.</a>
+          <a class="catalog-item-price primary-btn" href="#">12500 р.</a>
           <div class="catalog-item-popup">
               <a class="catalog-item-popup-buy" href="#">купить</a>
               <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
           </div>
         </li>
         <li class="catalog-item">
-          <img src="img/Perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 3000" class="catalog-item-img">
+          <img src="img/perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 3000" class="catalog-item-img">
           <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
           <span class="goods-old-price">22500 р.</span>
-          <a class="catalog-item-price red-btn" href="#">15500 р.</a>
+          <a class="catalog-item-price primary-btn" href="#">15500 р.</a>
           <div class="catalog-item-popup">
               <a class="catalog-item-popup-buy" href="#">купить</a>
               <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
           </div>
         </li>
         <li class="catalog-item">
-          <img src="img/Perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 6000" class="catalog-item-img">
+          <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 6000" class="catalog-item-img">
           <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
           <span class="goods-old-price">30500 р.</span>
-          <a class="catalog-item-price red-btn" href="#">25500 р.</a>
+          <a class="catalog-item-price primary-btn" href="#">25500 р.</a>
           <div class="catalog-item-popup">
               <a class="catalog-item-popup-buy" href="#">купить</a>
               <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
           </div>
         </li>
         <li class="catalog-item">
-          <img src="img/Perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 2000" class="catalog-item-img">
+          <img src="img/perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 2000" class="catalog-item-img">
           <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
           <span class="goods-old-price"></span>
-          <a class="catalog-item-price red-btn" href="#">12500 р.</a>
+          <a class="catalog-item-price primary-btn" href="#">12500 р.</a>
           <div class="catalog-item-popup">
               <a class="catalog-item-popup-buy" href="#">купить</a>
               <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
           </div>
         </li>
         <li class="catalog-item">
-          <img src="img/Perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 3000" class="catalog-item-img">
+          <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 3000" class="catalog-item-img">
           <h3 class="catalog-item-title">Перфоратор BOSCH BFG 3000</h3>
           <span class="goods-old-price">22500 р.</span>
-          <a class="catalog-item-price red-btn" href="#">15500 р.</a>
+          <a class="catalog-item-price primary-btn" href="#">15500 р.</a>
           <div class="catalog-item-popup">
               <a class="catalog-item-popup-buy" href="#">купить</a>
               <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
           </div>
         </li>
         <li class="catalog-item">
-          <img src="img/Perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 6000" class="catalog-item-img">
+          <img src="img/perforator_2_218x170.jpg" width="218" height="170" alt="BOSCH BFG 6000" class="catalog-item-img">
           <h3 class="catalog-item-title">Перфоратор BOSCH BFG 6000</h3>
           <span class="goods-old-price">30500 р.</span>
-          <a class="catalog-item-price red-btn" href="#">25500 р.</a>
+          <a class="catalog-item-price primary-btn" href="#">25500 р.</a>
           <div class="catalog-item-popup">
               <a class="catalog-item-popup-buy" href="#">купить</a>
               <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
           </div>
         </li>
         <li class="catalog-item">
-          <img src="img/Perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 2000" class="catalog-item-img">
+          <img src="img/perforator_1_218x170.jpg" width="218" height="170" alt="BOSCH BFG 2000" class="catalog-item-img">
           <h3 class="catalog-item-title">Перфоратор BOSCH BFG 2000</h3>
           <span class="goods-old-price"></span>
-          <a class="catalog-item-price red-btn" href="#">12500 р.</a>
+          <a class="catalog-item-price primary-btn" href="#">12500 р.</a>
           <div class="catalog-item-popup">
               <a class="catalog-item-popup-buy" href="#">купить</a>
               <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
