--- a/index.html
+++ b/index.html
@@ -145,10 +145,9 @@
         <h2 class="service-headline">сервисы</h2>
         <p class="service-title">Хороший интернет-магазин отличается от плохого не только ценами! Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
         <div class="service-slider">
-        	
-            <input id="delivery" type="radio" name="service-slider" checked>
-            <input id="warranty" type="radio" name="service-slider">
-            <input id="credit" type="radio" name="service-slider">
+          <input id="delivery" type="radio" name="service-slider" checked>
+          <input id="warranty" type="radio" name="service-slider">
+          <input id="credit" type="radio" name="service-slider">
           <div class="slider-btns">
             <label class="service-slider-btn service-btn-delivery" for="delivery">Доставку</label>
             <label class="service-slider-btn service-btn-warranty" for="warranty">Гарантия</label>
@@ -170,36 +169,37 @@
             <span>кредит</span>
             <p>Залезть в долговую яму стало проще!
               Кредитные консультанты придут вам на помощь.</p>
-              <a href="#" class="primary-btn credit-btn">отправить заявку</a>
+            <a href="#" class="primary-btn credit-btn">отправить заявку</a>
           </div>
         </div>
       </div>
     </section>
-    <section class="about-us">
-      <h2 class="visually-hidden"></h2>
+    <section class="container about-us">
       <div class="about-company">
-        <p class="about-company-title">компания "техномарт"</p>
-        <p class="about-company-description">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
+        <h2 class="visually-hidden">о нашей компании</h2>
+        <strong class="about-company-title">компания "техномарт"</strong>
+        <p class="about-company-description">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах. </p>
+        <p class="about-company-propose">
           Мы можем доставить ваш товар в самые отдаленные точки России!
-          Техномарт работает со многими транспортными компаниями: </p>
+          Техномарт работает со многими транспортными компаниями:</p>
         <ul class="partners-list">
           <li class="partners-list-item">Деловые линии</li>
           <li class="partners-list-item">Автотрейдинг</li>
           <li class="partners-list-item">ЖелДорЭкспедиция</li>
         </ul>
-        <a class="primary-btn" href="#">подробнее о компании</a>
+        <a class="primary-btn about-company-btn" href="#">подробнее о компании</a>
       </div>
       <div class="about-contacts">
-        <p class="about-contacts-title">контакты</p>
+        <strong class="about-contacts-title">контакты</strong>
         <p class="about-contacts-description">Вы можете забрать товар сами, заехав в наш офис:</p>
-        <a href="#"><img src="img/find-us-map_300x158.jpg" width="300" height="158" alt="Схема подъезда"></a>
-        <a class="primary-btn" href="#">заблудились? напишите нам</a>
+        <a class="about-contacts-map" href="#"><img src="img/find-us-map_300x158.jpg" width="300" height="158" alt="Схема подъезда"></a>
+        <a class="primary-btn about-contacts-btn" href="#">заблудились? напишите нам</a>
       </div>
     </section>
   </main>
   <footer>
     <div class="footer-top">
-      <div>
+      <div class="container">
         <a class="footer-logo" href="#" title="В начало страницы">техномарт</a>
         <nav class="footer-nav">
           <ul class="footer-nav-list">
@@ -211,23 +211,30 @@
           </ul>
         </nav>
       </div>
-      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
-      <ul class="footer-proposal-list">
-        <li class="footer-proposal-item"><a href="#">Материалы</a></li>
-        <li class="footer-proposal-item"><a href="#">Техника</a></li>
-        <li class="footer-proposal-item"><a href="#">Инструмент</a></li>
-        <li class="footer-proposal-item"><a href="#">Спецпредложения</a></li>
-      </ul>
+    </div>
+    <div class="footer-mid">
+      <div class="container">
+        <p class="footer-mid-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</br><a class="footer-mid-tel" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+        <ul class="footer-proposal-list">
+          <li class="footer-proposal-item"><a href="#">Материалы</a></li>
+          <li class="footer-proposal-item"><a href="#">Техника</a></li>
+          <li class="footer-proposal-item"><a href="#">Инструмент</a></li>
+          <li class="footer-proposal-item"><a href="#">Спецпредложения</a></li>
+        </ul>
+      </div>
+    </div>
     </div>
     <div class="footer-bot">
-      <p class="footer-copyright">2010-2019 Компания "Техномарт" Все права защищены</p>
-      <p class="footer-socials">
-        <a href="#" title="Мы во ВКонтакте"><span class="visually-hidden">Мы во ВКонтакте</span></a>
-        <a href="#" title="Мы на Фейсбук"><span class="visually-hidden">Мы на Фейсбук</span></a>
-        <a href="#" title="Мы в Инстаграм"><span class="visually-hidden">Мы в Инстаграм</span></a>
-      </p>
-      <p class="footer-mail">Обратная связь: <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
-      <p class="footer-academy">Разработано -<a href="http://www.htmlacademy.ru" target="_blank">htmlacademy.ru</a></p>
+      <div class="container">
+        <p class="footer-copyright">2010-2019 Компания "Техномарт" Все права защищены</p>
+        <p class="footer-socials">
+          <a class="footer-socials-vk" href="#" title="Мы во ВКонтакте"><span class="visually-hidden">Мы во ВКонтакте</span></a>
+          <a class="footer-socials-fb" href="#" title="Мы на Фейсбук"><span class="visually-hidden">Мы на Фейсбук</span></a>
+          <a class="footer-socials-instagram" href="#" title="Мы в Инстаграм"><span class="visually-hidden">Мы в Инстаграм</span></a>
+        </p>
+        <p class="footer-mail">Обратная связь: <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+        <p class="footer-academy">Разработано -<a href="http://www.htmlacademy.ru" target="_blank">htmlacademy.ru</a></p>
+      </div>
     </div>
   </footer>
   <div class="popup popup-map">
