--- a/catalog.html
+++ b/catalog.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
   <title>Техномарт - Каталог товаров</title>
 </head>
+
 <body>
   <header>
     <div class="header-top">
-      <a class="header-logo" href="index.html" title="На главную страницу">техномарт</a>
-      <input class="header-top-search" type="text" name="main-search" placeholder="Поиск:">
-      <a class="header-top-btn header-btn-bookmarks" href="#">Закладки: 0</a>
-      <a class="header-top-btn header-btn-cart" href="#">Корзина: 10</a>
-      <a class="header-top-btn header-btn-order" href="#">Оформить заказ</a>
+      <div class="container">
+        <a class="header-logo" href="index.html" title="На главную страницу">техномарт</a>
+        <input class="header-top-search" type="text" name="main-search" placeholder="Поиск:">
+        <a class="header-top-btn header-btn-bookmarks" href="#">Закладки: 0</a>
+        <a class="header-top-btn header-btn-cart" href="#">Корзина: 10</a>
+        <a class="header-top-btn header-btn-order" href="#">Оформить заказ</a>
+      </div>
     </div>
     <div class="header-mid">
       <p class="header-mid-title">Интернет-магазин строительных материалов и инструментов для ремонта</p>
       <div class="header-contacts">
         <a class="header-tel" href="tel:+78125550555" title="Позвонить нам">+7 (812) 555-05-55
-                </a>
+        </a>
         <p class="header-adress">
           г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
         </p>
       </div>
       <ul class="user-menu">
         <li class="user-menu-item"><a class="user-menu-btn user-menu-profile" href="#">Равшан Джамшутович</a><a class="user-logout" href="#" title="Выход"></a></li>
-        <li class="user-menu-item"><a class="user-menu-orders" href="#">Мои заказы</a></li>
-        <li class="user-menu-item"><a class="user-menu-control-panel" href="#">Личный кабинет</a></li>
+        <li class="user-menu-item user-menu-orders"><a href="#">Мои заказы</a></li>
+        <li class="user-menu-item user-menu-control-panel"><a href="#">Личный кабинет</a></li>
       </ul>
     </div>
     <div class="header-bot">
@@ -45,13 +49,15 @@
     </div>
   </header>
   <main>
-    <ul class="breadcrumbs-main">
-      <li><a href="index.html" title="На главную страницу"></label><span class="breadcrumbs-home"></span></a></li>
-      <li><a href="#">каталог</a></li>
-      <li><a href="#">инструмент</a></li>
-      <li><a>перфораторы</a></li>
-    </ul>
-    <section class="catalog">
+    <div class="container">
+      <ul class="breadcrumbs-main">
+        <li><a class="breadcrumbs-main-index" href="index.html" title="На главную страницу"><span class="breadcrumbs-home-icon">Домой</span></a></li>
+        <li><a class="breadcrumbs-main-catalog" href="#">каталог</a></li>
+        <li><a class="breadcrumbs-main-tools" href="#">инструмент</a></li>
+        <li><a class="breadcrumbs-main-perforators">перфораторы</a></li>
+      </ul>
+    </div>
+    <section class="container catalog">
       <h2 class="catalog-name">перфораторы</h2>
       <div class="catalog-filter">
         <form action="https://echo.htmlacademy.ru">
@@ -84,8 +90,8 @@
           <span class="goods-old-price">22500 р.</span>
           <a class="catalog-item-price primary-btn" href="#">15500 р.</a>
           <div class="catalog-item-popup">
-              <a class="catalog-item-popup-buy" href="#">купить</a>
-              <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+            <a class="catalog-item-popup-buy" href="#">купить</a>
+            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
           </div>
         </li>
         <li class="catalog-item">
@@ -94,8 +100,8 @@
           <span class="goods-old-price">30500 р.</span>
           <a class="catalog-item-price primary-btn" href="#">25500 р.</a>
           <div class="catalog-item-popup">
-              <a class="catalog-item-popup-buy" href="#">купить</a>
-              <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+            <a class="catalog-item-popup-buy" href="#">купить</a>
+            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
           </div>
         </li>
         <li class="catalog-item">
@@ -104,8 +110,8 @@
           <span class="goods-old-price"></span>
           <a class="catalog-item-price primary-btn" href="#">12500 р.</a>
           <div class="catalog-item-popup">
-              <a class="catalog-item-popup-buy" href="#">купить</a>
-              <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+            <a class="catalog-item-popup-buy" href="#">купить</a>
+            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
           </div>
         </li>
         <li class="catalog-item">
@@ -114,8 +120,8 @@
           <span class="goods-old-price">22500 р.</span>
           <a class="catalog-item-price primary-btn" href="#">15500 р.</a>
           <div class="catalog-item-popup">
-              <a class="catalog-item-popup-buy" href="#">купить</a>
-              <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+            <a class="catalog-item-popup-buy" href="#">купить</a>
+            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
           </div>
         </li>
         <li class="catalog-item">
@@ -124,8 +130,8 @@
           <span class="goods-old-price">30500 р.</span>
           <a class="catalog-item-price primary-btn" href="#">25500 р.</a>
           <div class="catalog-item-popup">
-              <a class="catalog-item-popup-buy" href="#">купить</a>
-              <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+            <a class="catalog-item-popup-buy" href="#">купить</a>
+            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
           </div>
         </li>
         <li class="catalog-item">
@@ -134,8 +140,8 @@
           <span class="goods-old-price"></span>
           <a class="catalog-item-price primary-btn" href="#">12500 р.</a>
           <div class="catalog-item-popup">
-              <a class="catalog-item-popup-buy" href="#">купить</a>
-              <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+            <a class="catalog-item-popup-buy" href="#">купить</a>
+            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
           </div>
         </li>
         <li class="catalog-item">
@@ -144,8 +150,8 @@
           <span class="goods-old-price">22500 р.</span>
           <a class="catalog-item-price primary-btn" href="#">15500 р.</a>
           <div class="catalog-item-popup">
-              <a class="catalog-item-popup-buy" href="#">купить</a>
-              <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+            <a class="catalog-item-popup-buy" href="#">купить</a>
+            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
           </div>
         </li>
         <li class="catalog-item">
@@ -154,8 +160,8 @@
           <span class="goods-old-price">30500 р.</span>
           <a class="catalog-item-price primary-btn" href="#">25500 р.</a>
           <div class="catalog-item-popup">
-              <a class="catalog-item-popup-buy" href="#">купить</a>
-              <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+            <a class="catalog-item-popup-buy" href="#">купить</a>
+            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
           </div>
         </li>
         <li class="catalog-item">
@@ -164,8 +170,8 @@
           <span class="goods-old-price"></span>
           <a class="catalog-item-price primary-btn" href="#">12500 р.</a>
           <div class="catalog-item-popup">
-              <a class="catalog-item-popup-buy" href="#">купить</a>
-              <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
+            <a class="catalog-item-popup-buy" href="#">купить</a>
+            <a class="catalog-item-popup-bookmarks" href="#">в закладки</a>
           </div>
         </li>
       </ul>
@@ -173,7 +179,7 @@
   </main>
   <footer>
     <div class="footer-top">
-      <div>
+      <div class="container">
         <a class="footer-logo" href="#" title="В начало страницы">техномарт</a>
         <nav class="footer-nav">
           <ul class="footer-nav-list">
@@ -185,23 +191,30 @@
           </ul>
         </nav>
       </div>
-      <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<a href="tel:+78125550555">+7 (812) 555-05-55</a></p>
-      <ul class="footer-proposal-list">
-        <li class="footer-proposal-item"><a href="#">Материалы</a></li>
-        <li class="footer-proposal-item"><a href="#">Техника</a></li>
-        <li class="footer-proposal-item"><a href="#">Инструмент</a></li>
-        <li class="footer-proposal-item"><a href="#">Спецпредложения</a></li>
-      </ul>
+    </div>
+    <div class="footer-mid">
+      <div class="container">
+        <p class="footer-mid-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</br><a class="footer-mid-tel" href="tel:+78125550555">+7 (812) 555-05-55</a></p>
+        <ul class="footer-proposal-list">
+          <li class="footer-proposal-item"><a href="#">Материалы</a></li>
+          <li class="footer-proposal-item"><a href="#">Техника</a></li>
+          <li class="footer-proposal-item"><a href="#">Инструмент</a></li>
+          <li class="footer-proposal-item"><a href="#">Спецпредложения</a></li>
+        </ul>
+      </div>
+    </div>
     </div>
     <div class="footer-bot">
-      <p class="footer-copyright">2010-2019 Компания "Техномарт" Все права защищены</p>
-      <p class="footer-socials">
-        <a class="footer-socials-vk" href="#" title="Мы во ВКонтакте"><span class="visually-hidden">Мы во ВКонтакте</span></a>
-        <a href="#" title="Мы на Фейсбук"><span class="visually-hidden">Мы на Фейсбук</span></a>
-        <a href="#" title="Мы в Инстаграм"><span class="visually-hidden">Мы в Инстаграм</span></a>
-      </p>
-      <p class="footer-mail">Обратная связь: <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
-      <p class="footer-academy">Разработано -<a href="http://www.htmlacademy.ru" target="_blank">htmlacademy.ru</a></p>
+      <div class="container">
+        <p class="footer-copyright">2010-2019 Компания "Техномарт" Все права защищены</p>
+        <p class="footer-socials">
+          <a class="footer-socials-vk" href="#" title="Мы во ВКонтакте"><span class="visually-hidden">Мы во ВКонтакте</span></a>
+          <a class="footer-socials-fb" href="#" title="Мы на Фейсбук"><span class="visually-hidden">Мы на Фейсбук</span></a>
+          <a class="footer-socials-instagram" href="#" title="Мы в Инстаграм"><span class="visually-hidden">Мы в Инстаграм</span></a>
+        </p>
+        <p class="footer-mail">Обратная связь: <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
+        <p class="footer-academy">Разработано -<a href="http://www.htmlacademy.ru" target="_blank">htmlacademy.ru</a></p>
+      </div>
     </div>
   </footer>
   <div class="popup popup-cart">
@@ -210,7 +223,10 @@
     <button class="popup-cart-continue">продолжить покупки</button>
     <button class="popup-close-btn popup-close-btn-cart"><span>закрыть</span></button>
   </div>
-  <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+  <script>
+  document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')
+
+  </script>
 </body>
 
 </html>
