--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </p>
       </div>
       <ul class="user-menu">
-        <li><a class="user-menu-btn login-enter" href="#">Войти</a></li>
-        <li><a class="user-menu-btn login-reg" href="#">Регистрация</a></li>
+        <li class="user-menu-btn login-enter"><a href="#">Войти</a></li>
+        <li class="user-menu-btn login-reg"><a href="#">Регистрация</a></li>
       </ul>
     </div>
     <div class="container header-bot">
